[package]
name = "ginka"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "7.0.0"
byteorder = "1.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["derive"] }
enum-repr = "0.2.6"
flate2 = "1.0.35"
futures-util = "0.3.31"
mac-notification-sys = "0.6.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.135"
serde_with = { version = "3.12.0", features = ["macros"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
